--- a/tdc.html
+++ b/tdc.html
@@ -198,24 +198,24 @@
                       <div class="row" style="height: 100px; padding: 0px 16px">
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div class="row">
-                            <div class="col-xs-12" style="height: 80px;">
+                            <div class="col-xs-12" style="height: 75px;">
                               <div class="with-title qvobject" id="QV-5"></div>
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                             <div class="col-xs-12 sub-title" style="height: 25px; top:-18px">
                               <div class="with-title qvplaceholder" id="QV-5-1"></div>
                             </div>
                           </div>
                         </div>
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div class="row">
-                            <div class="col-xs-12" style="height: 80px;">
+                            <div class="col-xs-12" style="height: 75px;">
                               <div class="with-title qvobject" id="QV-6"></div>
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                             <div class="col-xs-12 sub-title" style="height: 25px; top:-18px">
                               <div class="with-title qvplaceholder" id="QV-6-1" style="height: 100%;"></div>
                             </div>
                           </div>
@@ -337,13 +337,23 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row" style="height: 50px; padding: 0px 16px">
-                        <div class="my-legend" style="padding: 0px 12px;">
+                      <div class="row" style="height: 50px; padding: 16px">
+                        <div class="my-legend" style="padding: 12px;">
                           <div class="legend-scale">
                             <ul class="legend-labels">
-                              <li><span style="background:#DA8177;"></span>Low (0 - 60%)</li>
-                              <li><span style="background:#F8C143;"></span>Mid (60-80%)</li>
-                              <li><span style="background:#9FCD63;"></span>High (&gt;80%)</li>
+                              <div class="row">
+                                <div class="col-xs-4">
+                                  <li><span style="background:#DA8177;"></span>Low (0 - 60%)</li>
+                                </div>
+                                <div class="col-xs-4">
+                                  <li><span style="background:#F8C143;"></span>Mid (60-80%)</li>
+
+                                </div>
+                                <div class="col-xs-4">
+                                  <li><span style="background:#9FCD63;"></span>High (&gt;80%)</li>
+
+                                </div>
+                              </div>
                             </ul>
                           </div>
                           </div>
@@ -358,24 +368,24 @@
                       <div class="row" style="height: 100px; padding: 0px 16px">
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div class="row">
-                            <div class="col-xs-12" style="height: 80px;">
+                            <div class="col-xs-12" style="height: 75px;">
                               <div class="with-title qvobject" id="QV-15"></div>
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                             <div class="col-xs-12 sub-title" style="height: 25px; top:-18px">
                               <div class="with-title qvplaceholder" id="QV-15-1"></div>
                             </div>
                           </div>
                         </div>
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div class="row">
-                            <div class="col-xs-12" style="height: 80px;">
+                            <div class="col-xs-12" style="height: 75px;">
                               <div class="with-title qvobject" id="QV-16"></div>
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                             <div class="col-xs-12 sub-title" style="height: 25px; top:-18px">
                               <div class="with-title qvplaceholder" id="QV-16-1"></div>
                             </div>
                           </div>
@@ -417,13 +427,23 @@
                         </div>
                       </div>
                       <div class="row" style="height: 50px; padding: 0px 16px">
-                        <div class="my-legend" style="padding: 0px 12px;">
+                        <div class="my-legend" style="padding:0px 12px;">
                           <div class="legend-scale">
                             <ul class="legend-labels">
-                              <li><span style="background:#DA8177;"></span>Low (-100 - 0%)</li>
-                              <li><span style="background:#F8C143;"></span>Good (0 - 30%)</li>
-                              <li><span style="background:#9FCD63;"></span>Great (30 - 70%)</li>
-                              <li><span style="background:#5CB14D;"></span>Excelent (70 - 100%)</li>
+                              <div class="row">
+                                <div class="col-xs-6">
+                                  <li><span style="background:#DA8177;"></span>Low (-100 - 0%)</li>
+                                </div>
+                                <div class="col-xs-6">
+                                  <li><span style="background:#F8C143;"></span>Good (0 - 30%)</li>
+                                </div>
+                                <div class="col-xs-6">
+                                  <li><span style="background:#9FCD63;"></span>Great (30 - 70%)</li>
+                                </div>
+                                <div class="col-xs-6">
+                                  <li><span style="background:#5CB14D;"></span>Excelent (70 - 100%)</li>
+                                </div>
+                              </div>
                             </ul>
                           </div>
                           </div>
@@ -438,24 +458,24 @@
                       <div class="row" style="height: 100px; padding: 0px 16px">
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div class="row">
-                            <div class="col-xs-12" style="height: 80px;">
+                            <div class="col-xs-12" style="height: 75px;">
                               <div class="with-title qvobject" id="QV-21"></div>
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                             <div class="col-xs-12 sub-title" style="height: 25px; top:-18px">
                               <div class="with-title qvobject" id="QV-21-1"></div>
                             </div>
                           </div>
                         </div>
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div class="row">
-                            <div class="col-xs-12" style="height: 80px;">
+                            <div class="col-xs-12" style="height: 75px;">
                               <div class="with-title qvobject" id="QV-22"></div>
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                             <div class="col-xs-12 sub-title" style="height: 25px; top:-18px">
                               <div class="with-title qvplaceholder" id="QV-022"></div>
                             </div>
                           </div>
@@ -496,13 +516,21 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row" style="height: 50px; padding: 0px 16px">
-                        <div class="my-legend" style="padding: 0px 12px;">
+                      <div class="row" style="height: 50px; padding:  16px">
+                        <div class="my-legend" style="padding: 12px;">
                           <div class="legend-scale">
                             <ul class="legend-labels">
-                              <li><span style="background:#DA8177;"></span>Low (0 - 60%)</li>
-                              <li><span style="background:#F8C143;"></span>Mid (60-80%)</li>
-                              <li><span style="background:#9FCD63;"></span>High (&gt;80%)</li>
+                              <div class="row">
+                                <div class="col-xs-4">
+                                  <li><span style="background:#DA8177;"></span>Low (0 - 60%)</li>
+                                </div>
+                                <div class="col-xs-4">
+                                  <li><span style="background:#F8C143;"></span>Mid (60-80%)</li>
+                                </div>
+                                <div class="col-xs-4">
+                                  <li><span style="background:#9FCD63;"></span>High (&gt;80%)</li>
+                                </div>
+                              </div>
                             </ul>
                           </div>
                           </div>
@@ -558,12 +586,12 @@
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-8">
-                    <div class="item bg-dark" style="height: 580px;">
+                    <div class="item bg-dark" style="height: 640px;">
                       <div class="row" style="padding: 0px 16px">
                         <div class="col-xs-12 title">Initiative Progress</div>
-                        <div class="col-xs-12" style="height: 540px;">
+                        <div class="col-xs-12" style="height: 620px;">
                           <div class="row">
-                            <div class="col-xs-12" style="height: 540px;">
+                            <div class="col-xs-12" style="height: 620px;">
                               <div class="with-title qvplaceholder" id="QV-51"></div>
                             </div>
                           </div>
@@ -662,13 +690,13 @@
                 <div class="row" style="padding: 0px 16px">
                   <div class="col-xs-12" style="padding: 0px">
                     <div class="item bg-dark" style="height: 520px">
-                      <div class="row" style="height: 40px; padding: 0px 16px;">
+                      <div class="row" style=" height:40px; padding: 0px 16px;">
                         <div class="col-xs-12 title">
                           Understanding Customer Satisfaction
                         </div>
                       </div>
                       <div class="col-xs-12 col-sm-8">
-                        <div class="row" style="height: 424px">
+                        <div class="row" style="height: 430px">
                           <div class="col-xs-12" style="height: 100%; padding: 0px">
                             <div class="d-flex justify-content-end" style="height: 35px; text-align: center">
                               <div class="btn-group toggle" role="group" aria-label="Basic example">
@@ -680,41 +708,67 @@
                                 </button>
                               </div>
                             </div>
-                            <div id="absolute" style="height: 409px">
+                            <div id="absolute" style="height: 395px">
                               <div id="QV-39" class="qvobject" style="height: 100%"></div>
                             </div>
-                            <div id="relative" style="height: 409px">
+                            <div id="relative" style="height: 395px">
                               <div id="QV-40" class="qvobject" style="height: 100%"></div>
                             </div>
                           </div>
                         </div>
+                        <div class="row" style="height: 50px; padding: 0px 16px">
+                          <div class="my-legend" style="padding: 12px;">
+                            <div class="legend-scale">
+                              <ul class="legend-labels">
+                                <li><span style="background:#DA8177;"></span>Low (0 - 60%)</li>
+                                <li><span style="background:#F8C143;"></span>Mid (60-80%)</li>
+                                <li><span style="background:#9FCD63;"></span>High (&gt;80%)</li>
+                              </ul>
+                            </div>
+                            </div>
+                        </div>
                       </div>
                       <div class="col-xs-12 col-sm-4">
-                        <div class="row" style="height: 54px">
-                          <div class="col-xs-4">
-                            <div class="qvplaceholder" id="QV-41" style="height: 54px"></div>
+                        <div class="row" style="height: 60px">
+                          <div class="col-xs-4" style="height: 60px">
+                            
+                            <div class="qvplaceholder" id="QV-41"></div>
                           </div>
-                          <div class="col-xs-4">
-                            <div class="qvplaceholder" id="QV-42" style="height: 54px"></div>
+                          <div class="col-xs-4" style="height: 60px">
+                            <div class="row">
+                              <div class="col-xs-12 title">
+                                CSAT
+                              </div>
+                              <div class="col-xs-12" style="height: 40px;">
+                                <div class="qvplaceholder" id="QV-42"></div>
+                              </div>
+                            </div>
                           </div>
-                          <div class="col-xs-4">
-                            <div class="qvplaceholder" id="QV-43" style="height: 54px"></div>
+                          <div class="col-xs-4" style="height: 60px">
+                            <div class="row">
+                              <div class="col-xs-12 title">
+                                Delight
+                              </div>
+                              <div class="col-xs-12" style="height: 40px;">
+                                <div class="qvplaceholder" id="QV-43"></div>
+                              </div>
+                            </div>
                           </div>
                         </div>
-                        <div class="row" style="height: 175px">
-                          <div class="col-xs-12 title" style="height: 40px; padding: 10px">
+                        <div class="row" style="height: 220px">
+                          <div class="col-xs-12 title" style="padding: 10px">
                             Experience Pain Points
                           </div>
                           <div class="col-xs-12 item">
-                            <div class="qvplaceholder" id="QV-44" style="height: 135px"></div>
+                            <div class="qvobject" id="QV-44" style="height: 200px"></div>
                           </div>
                         </div>
-                        <div class="row" style="height: 175px">
-                          <div class="col-xs-12 title" style="height: 40px; padding: 10px">
+                        <div class="row" style="height: 220px">
+                          <div class="col-xs-12 title" style="padding: 10px">
                             Moments of Delight
                           </div>
                           <div class="col-xs-12 item">
-                            <div class="qvplaceholder" id="QV-45" style="height: 135px"></div>
+                            <div class="qvplaceholder" id="QV-45" style="height: 200px"></div>
                           </div>
                         </div>
                       </div>
