removed scroll from initiatives

--- a/tdc.html
+++ b/tdc.html
@@ -239,14 +239,14 @@
                                 </div>
                               </div>
                               <div class="row">
-                                <div class="col-xs-12" style="height: 60px; padding: 0px">
+                                <div class="col-xs-12" style="height: 40px; padding: 0px">
                                   <div class="qvobject" id="QV-7"></div>
                                 </div>
                                <div class="col-xs-12 sub-title">
                                   Split of Airports by satisfaction scores of International Visitors
                                 </div>
                               </div>
-                              <div class="row" style="height: 100px; padding: 0px 16px">
+                              <div class="row" style="height: 120px; padding: 0px 16px">
                                 <div class="qvobject" id="QV-8"></div>
                               </div>
                             </div>
@@ -265,14 +265,14 @@
                                 </div>
                               </div>
                               <div class="row">
-                                <div class="col-xs-12" style="height: 60px; padding: 0px">
+                                <div class="col-xs-12" style="height: 40px; padding: 0px">
                                   <div class="qvobject" id="QV-9"></div>
                                 </div>
                                <div class="col-xs-12 sub-title">
                                   Split of Destinations by satisfaction scores of International Visitors
                                 </div>
                               </div>
-                              <div class="row" style="height: 100px; padding: 0px 16px">
+                              <div class="row" style="height: 120px; padding: 0px 16px">
                                 <div class="with-title qvobject" id="QV-10"></div>
                               </div>
                             </div>
@@ -295,14 +295,14 @@
                                     </div>
                                   </div>
                                   <div class="row">
-                                    <div class="col-xs-12" style="height: 60px; padding: 0px">
+                                    <div class="col-xs-12" style="height: 40px; padding: 0px">
                                       <div class="qvobject" id="QV-11"></div>
                                     </div>
                                    <div class="col-xs-12 sub-title">
                                       Split of Priority Sites meeting basic experience standard
                                     </div>
                                   </div>
-                                  <div class="row" style="height: 100px; padding: 0px">
+                                  <div class="row" style="height: 120px; padding: 0px">
                                     <div class="with-title qvobject" id="QV-12"></div>
                                   </div>
                                 </div>
@@ -321,14 +321,14 @@
                                     </div>
                                   </div>
                                   <div class="row">
-                                    <div class="col-xs-12" style="height: 60px; padding: 0px">
+                                    <div class="col-xs-12" style="height: 40px; padding: 0px">
                                       <div class="qvobject" id="QV-13"></div>
                                     </div>
                                    <div class="col-xs-12 sub-title">
                                       Split of Destinations by Hafawah Index
                                     </div>
                                   </div>
-                                  <div class="row" style="height: 100px; padding: 0px">
+                                  <div class="row" style="height: 120px; padding: 0px">
                                     <div class="with-title qvobject" id="QV-14"></div>
                                   </div>
                                 </div>
@@ -592,7 +592,7 @@
                         <div class="col-xs-12" style="height: 620px;">
                           <div class="row">
                             <div class="col-xs-12" style="height: 620px;">
-                              <div class="with-title qvplaceholder" id="QV-51"></div>
+                              <div class="with-title qvobject" id="QV-51"></div>
                             </div>
                           </div>
                         </div>
