--- a/tdc.html
+++ b/tdc.html
@@ -631,7 +631,7 @@
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div id="QV-31" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                         </div>
-                        <div class="col-xs-6" style="height: 100%; padding: 0px">
+                        <div class="col-xs-6" style="height: 100%; padding-top: 10px;">
                           <div id="QV32" class="qvobject" style="width: 100%; height: 100%"></div>
                         </div>
                       </div>
@@ -648,7 +648,7 @@
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div id="QV33" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                         </div>
-                        <div class="col-xs-6" style="height: 100%; padding: 0px">
+                        <div class="col-xs-6" style="height: 100%; padding-top: 10px;">
                           <div id="QV34" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                         </div>
                       </div>
@@ -663,7 +663,7 @@
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
                           <div id="QV35" class="qvplaceholder" style="height: 100%"></div>
                         </div>
-                        <div class="col-xs-6" style="height: 100%; padding: 0px">
+                        <div class="col-xs-6" style="height: 100%; padding-top: 10px;">
                           <div id="QV36" class="qvplaceholder" style="height: 100%"></div>
                         </div>
                       </div>
