--- a/tdc.html
+++ b/tdc.html
@@ -376,7 +376,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="row" style="height: 50px; padding: 16px">
+                    <div class="row" style="height: 50px; padding: 16px 20px">
                       <div class="my-legend" style="padding-top: 4px">
                         <div class="legend-scale">
                           <ul class="legend-labels">
@@ -485,28 +485,28 @@
                         <div class="legend-scale">
                           <ul class="legend-labels">
                             <div class="row">
-                              <div class="col-xs-3 legend-item">
-                                <li style="width: 100%">
+                              <div class="legend-item">
+                                <li style="width: 85px; padding:0px 2px">
                                   <span style="background: #da8177"></span>
-                                  <span class="LegendTitle">Low(-100-0)</span>
+                                  <span class="LegendTitle" style="width: 50px !important;">Low(-100-0)</span>
                                 </li>
                               </div>
-                              <div class="col-xs-3 legend-item">
-                                <li>
+                              <div class="legend-item">
+                                <li style="width: 85px; padding:0px 2px">
                                   <span style="background: #f8c143"></span>
-                                  <span class="LegendTitle">Good(0-30)</span>
+                                  <span class="LegendTitle" style="width: 50px !important;">Good(0-30)</span>
                                 </li>
                               </div>
                               <div class="col-xs-3 legend-item" style="padding: 0">
-                                <li style="width: 100%">
+                                <li style="width: 105px; padding:0px 2px">
                                   <span style="background: #9fcd63"></span>
-                                  <span class="LegendTitle">Great(30-70)</span>
+                                  <span class="LegendTitle" style="width: 70px !important;">Great(30-70)</span>
                                 </li>
                               </div>
-                              <div class="col-xs-3 legend-item">
-                                <li>
+                              <div class="legend-item">
+                                <li style="width: 104px; padding:0px 2px">
                                   <span style="background: #3d8630"></span>
-                                  <span class="LegendTitle">Excelent(70-100)</span>
+                                  <span class="LegendTitle" style="width: 70px !important;">Excelent(70-100)</span>
                                 </li>
                               </div>
                             </div>
@@ -591,7 +591,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="row" style="height: 50px; padding: 16px">
+                    <div class="row" style="height: 50px; padding: 16px 20px">
                       <div class="my-legend" style="padding-top: 13px">
                         <div class="legend-scale">
                           <ul class="legend-labels">
@@ -704,11 +704,11 @@
                       </div>
                       <div class="col-xs-12" style="height: 600px">
                         <div class="row">
-                          <div class="col-xs-12" style="height: 532px">
-                            <div class="with-title qvplaceholder" id="QV-51"></div>
+                          <div class="col-xs-12" id="pivotTable" style="height: 532px">
+                            <div class="with-title qvobject" id="QV-51"></div>
                           </div>
                         </div>
-                        <div class="row" style="height: 50px">
+                       <!-- <div class="row" style="height: 50px">
                           <div class="my-legend" style="padding: 0px 26px">
                             <div class="legend-scale">
                               <ul class="legend-labels">
@@ -744,7 +744,7 @@
                               </ul>
                             </div>
                           </div>
-                        </div>
+                        </div>-->
                       </div>
                     </div>
                   </div>
@@ -857,10 +857,10 @@
                               </button>
                             </div>
                           </div>
-                          <div id="absolute" style="height: 395px">
+                          <div id="absolute" style="height: 395px; position: relative; bottom: 36px !important;">
                             <div id="QV-39" class="qvobject" style="height: 100%"></div>
                           </div>
-                          <div id="relative" style="height: 395px">
+                          <div id="relative" style="height: 395px; position: relative; bottom: 36px !important;">
                             <div id="QV-40" class="qvplaceholder" style="height: 100%"></div>
                           </div>
                         </div>
@@ -915,7 +915,7 @@
                       ">
                           Experience Pain Points
                         </div>
-                        <div class="col-xs-12 item" style="padding: 12px 0px;">
+                        <div class="col-xs-12 item" style="padding: 12px;">
                           <div class="qvobject" id="QV-44" style="height: 180px"></div>
                         </div>
                       </div>
@@ -926,7 +926,7 @@
                       ">
                           Moments of Delight
                         </div>
-                        <div class="col-xs-12 item" style="padding: 12px 0px;">
+                        <div class="col-xs-12 item" style="padding: 12px;">
                           <div class="qvplaceholder" id="QV-45" style="height: 160px"></div>
                         </div>
                       </div>
