changed legend font size

--- a/tdc.html
+++ b/tdc.html
@@ -664,29 +664,34 @@
                             <div class="row">
                               <div class="col-xs-4">
                                 <li>
-                                  <span style="background: #68399b"></span>Completed
+                                  <span style="background: #68399b"></span>
+                                  <span class="LegendTitle">Completed</span>
                                 </li>
                               </div>
                               <div class="col-xs-4">
                                 <li>
                                   <span style="background: #9fcd63"></span>
-                                  On
-                                  Track
+                                  <span class="LegendTitle"> On
+                                    Track</span>
                                 </li>
                               </div>
                               <div class="col-xs-4">
                                 <li>
-                                  <span style="background: #da8177"></span>Delayed
+                                  <span style="background: #da8177"></span>
+                                  <span class="LegendTitle">Delayed</span>
                                 </li>
                               </div>
                               <div class="col-xs-4">
                                 <li>
-                                  <span style="background: #b8b8b8"></span>Committed
+                                  <span style="background: #b8b8b8"></span>
+                                  <span class="LegendTitle">Committed</span>
+                                  
                                 </li>
                               </div>
                               <div class="col-xs-4">
                                 <li>
-                                  <span style="background: #bd761a"></span>Proposed
+                                  <span style="background: #bd761a"></span>
+                                  <span class="LegendTitle">Proposed</span>
                                 </li>
                               </div>
                             </div>
@@ -893,16 +898,16 @@
                         </div>
                         <div class="col-xs-4" style="height: 60px">
                           <div class="row">
-                            <div class="col-xs-12 title">CSAT</div>
-                            <div class="col-xs-12" style="height: 40px">
+                            <div class="col-xs-12 title" style="display: flex;justify-content:center; align-items: center;">CSAT</div>
+                            <div class="col-xs-12" style="height: 40px; display: flex;justify-content:center; align-items: center;" >
                               <div class="qvobject" id="QV-42"></div>
                             </div>
                           </div>
                         </div>
                         <div class="col-xs-4" style="height: 60px">
                           <div class="row">
-                            <div class="col-xs-12 title">Delight</div>
-                            <div class="col-xs-12" style="height: 40px">
+                            <div class="col-xs-12 title" style="display: flex;justify-content:center; align-items: center;">Delight</div>
+                            <div class="col-xs-12" style="height: 40px; display: flex;justify-content:center; align-items: center;">
                               <div class="qvobject" id="QV-43"></div>
                             </div>
                           </div>
