--- a/tdc.html
+++ b/tdc.html
@@ -628,14 +628,14 @@
             <div class="container-fluid">
               <!--Filters-->
               <div class="row" style="height: 45px; width: 80%">
-                <div class="col-xs-4" style="height: 100%">
-                  <div id="QV-46" class="qvplaceholder" style="width: 100%; height: 100%"></div>
+                <div class="col-xs-2" style="height: 100%">
+                  <div id="QV-46" class="qvobject" style="width: 100%; height: 100%"></div>
                 </div>
-                <div class="col-xs-4" style="height: 100%">
-                  <div id="QV-47" class="qvplaceholder" style="width: 100%; height: 100%"></div>
+                <div class="col-xs-2" style="height: 100%">
+                  <div id="QV-47" class="qvobject" style="width: 100%; height: 100%"></div>
                 </div>
-                <div class="col-xs-4" style="height: 100%">
-                  <div id="QV-48" class="qvplaceholder" style="width: 100%; height: 100%"></div>
+                <div class="col-xs-2" style="height: 100%">
+                  <div id="QV-48" class="qvobject" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
               <div class="row">
@@ -899,7 +899,7 @@
                         <div class="col-xs-4" style="height: 60px">
                           <div class="row">
                             <div class="col-xs-12 title" style="display: flex;justify-content:center; align-items: center;">CSAT</div>
-                            <div class="col-xs-12" style="height: 40px; display: flex;justify-content:center; align-items: center;" >
+                            <div class="col-xs-12" style="height: 40px; display: flex;justify-content:center; align-items: center;">
                               <div class="qvobject" id="QV-42"></div>
                             </div>
                           </div>
@@ -921,7 +921,7 @@
                           Experience Pain Points
                         </div>
                         <div class="col-xs-12 item" style="padding: 12px;">
-                          <div class="qvobject" id="QV-44" style="height: 180px"></div>
+                          <div class="qvplaceholder" id="QV-44" style="height: 180px"></div>
                         </div>
                       </div>
                       <div class="row" style="height: 200px">
@@ -944,28 +944,28 @@
           <div class="paper-body" id="pdEnteringLeaving">
             <div class="container-fluid">
               <!--Filters-->
-              <div class="row" style="height: 45px; width: 100%">
-                <div class="col-xs-3" style="height: 100%">
+              <div class="row" style="height: 45px; width: 80%">
+                <div class="col-xs-2" style="height: 100%">
                   <div id="QV-27" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
-                <div class="col-xs-3" style="height: 100%">
+                <div class="col-xs-2" style="height: 100%">
                   <div id="QV-28" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
-                <div class="col-xs-3" style="height: 100%">
+                <div class="col-xs-2" style="height: 100%">
                   <div id="QV-29" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
-                <div class="col-xs-3" style="height: 100%">
+                <div class="col-xs-2" style="height: 100%">
                   <div id="QV-30" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
-                  <div class="item bg-dark" style="height: 120px">
-                    <div class="row" style="height: 40px; padding: 0px 16px">
-                      <div class="col-xs-12 title">Entering Satisfaction</div>
+                  <div class="item bg-dark" style="height: 100">
+                    <div class="row" style="height: 25px; padding: 0px 16px">
+                      <div class="col-xs-12 title">Recomendation (NPS)</div>
                     </div>
-                    <div class="row" style="height: 80px; padding: 0px 16px">
+                    <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
                         <div id="QV-31" class="qvobject" style="width: 100%; height: 100%"></div>
                       </div>
@@ -976,11 +976,11 @@
                   </div>
                 </div>
                 <div class="col-xs-12 col-md-4">
-                  <div class="item bg-dark" style="height: 120px">
-                    <div class="row" style="height: 40px; padding: 0px 16px">
-                      <div class="col-xs-12 title">Leaving Satisfaction</div>
+                  <div class="item bg-dark" style="height: 100px">
+                    <div class="row" style="height: 25px; padding: 0px 16px">
+                      <div class="col-xs-12 title">Re-visitation Intention</div>
                     </div>
-                    <div class="row" style="height: 80px; padding: 0px 16px">
+                    <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
                         <div id="QV33" class="qvobject" style="width: 100%; height: 100%"></div>
                       </div>
@@ -991,11 +991,11 @@
                   </div>
                 </div>
                 <div class="col-xs-12 col-md-4">
-                  <div class="item bg-dark" style="height: 120px">
-                    <div class="row" style="height: 40px; padding: 0px 16px">
-                      <div class="col-xs-12 title">Number of Arrivals</div>
+                  <div class="item bg-dark" style="height: 100px">
+                    <div class="row" style="height: 25px; padding: 0px 16px">
+                      <div class="col-xs-12 title">Offering Satisfaction</div>
                     </div>
-                    <div class="row" style="height: 80px; padding: 0px 16px">
+                    <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
                         <div id="QV35" class="qvobject" style="height: 100%"></div>
                       </div>
@@ -1004,22 +1004,24 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div>       
               </div>
               <!---->
               <!--Graphs-->
               <div class="row" style="padding: 0px 16px">
                 <div class="col-xs-12" style="padding: 0px">
-                  <div class="item bg-dark" style="height: 520px">
+                  <div class="item bg-dark" style="height: 520px">        
                     <div class="col-xs-12 col-sm-8">
                       <div class="row" style="height: 40px; padding: 0px 16px">
                         <div class="col-xs-12 title">
-                          Understanding Customer Satisfaction
+                          Understanding Airport Satisfaction
                         </div>
                       </div>
-                      <div class="row" style="height: 480px">
+                      <div class="row" style="height: 430px">
                         <div class="col-xs-12" style="height: 100%; padding: 0px">
-                          <div class="d-flex justify-content-end" style="height: 35px; text-align: center">
+                          <div class="d-flex justify-content-end" style="height: 35px; text-align: center; display: flex;
+                          align-items: center;
+                          justify-content: flex-end;">
                             <div class="btn-group toggle" role="group" aria-label="Basic example">
                               <button type="button" id="selectOverall" class="btn btn-secondary btn-round">
                                 Overall
@@ -1029,94 +1031,61 @@
                               </button>
                             </div>
                           </div>
-                          <div id="overall">
-                            <div id="QV-39" class="qvobject" style="height: 395px"></div>
-                            <div class="row" style="height: 50px; padding: 0px 16px">
-                              <div class="my-legend" style="padding: 12px">
-                                <div class="legend-scale">
-                                  <ul class="legend-labels">
-                                    <li>
-                                      <span style="background: #da8177"></span>
-                                      <span class="LegendTitle">Low (0 - 60%)</span>
-                                    </li>
-                                    <li>
-                                      <span style="background: #f8c143"></span>
-                                      <span class="LegendTitle">Mid (60-80%)</span>
-                                    </li>
-                                    <li>
-                                      <span style="background: #9fcd63"></span>
-                                      <span class="LegendTitle">High (&gt;80%)</span>
-                                    </li>
-                                  </ul>
-                                </div>
-                              </div>
-                            </div>
+                          <div id="overall" style="height: 395px; position: relative; bottom: 36px !important;">
+                            <div id="QV-39" class="qvobject" style="height: 100%"></div>
                           </div>
-                          <div id="segment">
-                            <div id="QV-40" class="qvplaceholder" style="height: 395px"></div>
-                            <div class="row" style="height: 50px; padding: 0px 16px">
-                              <div class="my-legend" style="padding: 12px">
-                                <div class="legend-scale">
-                                  <ul class="legend-labels">
-                                    <li>
-                                      <span style="background: #da8177"></span>
-                                      <span class="LegendTitle">Low (0 - 60%)</span>
-                                    </li>
-                                    <li>
-                                      <span style="background: #f8c143"></span>
-                                      <span class="LegendTitle">Mid (60-80%)</span>
-                                    </li>
-                                    <li>
-                                      <span style="background: #9fcd63"></span>
-                                      <span class="LegendTitle">High (&gt;80%)</span>
-                                    </li>
-                                  </ul>
-                                </div>
-                              </div>
-                            </div>
+                          <div id="segment" style="height: 395px; position: relative; bottom: 36px !important;">
+                            <div id="QV-40" class="qvplaceholder" style="height: 100%"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row" style="height: 50px; padding: 0px 16px">
+                        <div class="my-legend" style="padding: 12px">
+                          <div class="legend-scale">
+                            <ul class="legend-labels">
+                              <li>
+                                <span style="background: #da8177"></span>
+                                <span class="LegendTitle">Low (0 - 60%)</span>
+                              </li>
+                              <li>
+                                <span style="background: #f8c143"></span>
+                                <span class="LegendTitle">Mid (60-80%)</span>
+                              </li>
+                              <li>
+                                <span style="background: #9fcd63"></span>
+                                <span class="LegendTitle">High (&gt;80%)</span>
+                              </li>
+                            </ul>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="col-xs-12 col-sm-4">
                       <div class="row" style="height: 40px; padding: 0px 16px">
-                        <div class="col-xs-12 title">Placeholder Titile</div>
-                      </div>
-                      <div class="row" style="height: 60px">
-                        <div class="col-xs-4" style="height: 60px">
-                          <div class="qvobject" id="QV-41"></div>
-                        </div>
-                        <div class="col-xs-4" style="height: 60px">
-                          <div class="row">
-                            <div class="col-xs-12 title">CSAT</div>
-                            <div class="col-xs-12" style="height: 40px">
-                              <div class="qvobject" id="QV-42"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-xs-4" style="height: 60px">
-                          <div class="row">
-                            <div class="col-xs-12 title">Delight</div>
-                            <div class="col-xs-12" style="height: 40px">
-                              <div class="qvobject" id="QV-43"></div>
-                            </div>
-                          </div>
+                        <div class="col-xs-12 title" style="padding-top: 0px;">
+                          <div class="qvplaceholder" id="QV-44" style="height: 40px; width: 100%;">Placeholder for Airport Name</div>
                         </div>
                       </div>
-                      <div class="row" style="height: 220px">
-                        <div class="col-xs-12 title" style="padding: 10px">
-                          Experience Pain Points
+                      <div class="row" style="height: 200px">
+                        <div class="col-xs-12 title" style="
+                        padding: 10px;
+                        color: RGB(185, 186, 185);
+                      ">
+                          Satisfaction
                         </div>
-                        <div class="col-xs-12 item" style="padding: 12px 0px;">
-                          <div class="qvobject" id="QV-44" style="height: 200px"></div>
+                        <div class="col-xs-12 item" style="padding: 12px;">
+                          <div class="qvplaceholder" id="QV-44" style="height: 180px"></div>
                         </div>
                       </div>
-                      <div class="row" style="height: 220px">
-                        <div class="col-xs-12 title" style="padding: 10px">
-                          Moments of Delight
+                      <div class="row" style="height: 200px">
+                        <div class="col-xs-12 title" style="
+                        padding: 10px;
+                        color: RGB(185, 186, 185);
+                      ">
+                          Entering
                         </div>
-                        <div class="col-xs-12 item" style="padding: 12px 0px;">
-                          <div class="qvplaceholder" id="QV-45" style="height: 200px"></div>
+                        <div class="col-xs-12 item" style="padding: 12px;">
+                          <div class="qvplaceholder" id="QV-45" style="height: 160px"></div>
                         </div>
                       </div>
                     </div>
