--- a/tdc.html
+++ b/tdc.html
@@ -185,8 +185,8 @@
 
             <div class="PaperTitle" style="padding-left: 100px; height: 25px; font-size: 15px">
               <span style="height: 65px; width: 100px"></span>
-              <span id="btnOverview" class="PaperTitleItem">Overview</span>
-              <span id="btnInitiatives" class="PaperTitleItem PaperTitleSelectedItem">Initiatives</span>
+              <span id="btnOverview" class="PaperTitleItem PaperTitleSelectedItem">Overview</span>
+              <span id="btnInitiatives" class="PaperTitleItem">Initiatives</span>
               <span id="btnAdvocacy" class="PaperTitleItem">Advocacy</span>
               <span id="btnEntering" class="PaperTitleItem">Entering &amp; Leaving</span>
               <span id="btnMobility" class="PaperTitleItem">Mobility</span>
@@ -332,7 +332,7 @@
                                     <div class="qvplaceholder" id="QV-11"></div>
                                   </div>
                                   <div class="col-xs-12 sub-title-2">
-                                    Split of Priority Sites meeting basic
+                                    Split of Priority Sites meeting
                                     experience standard
                                   </div>
                                 </div>
@@ -340,7 +340,7 @@
                                     height: 150px;
                                     padding: 3px 15px 0px 3px;
                                   ">
-                                  <div class="with-title qvplaceholder" id="QV-12"></div>
+                                  <div class="with-title qvobject" id="QV-12"></div>
                                 </div>
                               </div>
                               <div class="col-xs-6 bottomRightKPI" style="height: 225px; padding: 0px">
@@ -368,7 +368,7 @@
                                     margin-top: 10px;
                                     padding: 3px 0px 0px 15px;
                                   ">
-                                  <div class="with-title qvplaceholder" id="QV-14"></div>
+                                  <div class="with-title qvobject" id="QV-14"></div>
                                 </div>
                               </div>
                             </div>
@@ -380,23 +380,23 @@
                       <div class="my-legend" style="padding-top: 4px">
                         <div class="legend-scale">
                           <ul class="legend-labels">
-                            <div class="row"  style="display: flex; justify-content: space-between;">
+                            <div class="row" style="display: flex; justify-content: space-between;">
                               <div class="col-xs-4" style="display: flex; justify-content: center;">
                                 <li>
                                   <span style="background: #da8177"></span>
-                                  <span class="LegendTitle">Low (0 - 60%)</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">Low (0 - 60%)</span>
                                 </li>
                               </div>
                               <div class="col-xs-4" style="display: flex; justify-content: center;">
                                 <li>
                                   <span style="background: #f8c143"></span>
-                                  <span class="LegendTitle">Mid (60-80%)</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">Mid (60-80%)</span>
                                 </li>
                               </div>
                               <div class="col-xs-4" style="display: flex; justify-content: center;">
                                 <li>
                                   <span style="background: #9fcd63"></span>
-                                  <span class="LegendTitle">High (&gt;80%)</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">High (&gt;80%)</span>
                                 </li>
                               </div>
                             </div>
@@ -599,19 +599,19 @@
                               <div class="col-xs-4" style="display: flex; justify-content: center;">
                                 <li>
                                   <span style="background: #da8177"></span>
-                                  <span class="LegendTitle">Low (0 - 60%)</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">Low (0 - 60%)</span>
                                 </li>
                               </div>
                               <div class="col-xs-4" style="display: flex; justify-content: center;">
                                 <li>
                                   <span style="background: #f8c143"></span>
-                                  <span class="LegendTitle">Mid (60-80%)</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">Mid (60-80%)</span>
                                 </li>
                               </div>
                               <div class="col-xs-4" style="display: flex; justify-content: center;">
                                 <li>
                                   <span style="background: #9fcd63"></span>
-                                  <span class="LegendTitle">High (&gt;80%)</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">High (&gt;80%)</span>
                                 </li>
                               </div>
                             </div>
@@ -672,31 +672,31 @@
                               <div class="col-xs-4">
                                 <li>
                                   <span style="background: #68399b"></span>
-                                  <span class="LegendTitle">Completed</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">Completed</span>
                                 </li>
                               </div>
                               <div class="col-xs-4">
                                 <li>
                                   <span style="background: #9fcd63"></span>
-                                  <span class="LegendTitle"> On Track</span>
+                                  <span class="LegendTitle" style="width: 62px !important;"> On Track</span>
                                 </li>
                               </div>
                               <div class="col-xs-4">
                                 <li>
                                   <span style="background: #da8177"></span>
-                                  <span class="LegendTitle">Delayed</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">Delayed</span>
                                 </li>
                               </div>
                               <div class="col-xs-4">
                                 <li>
                                   <span style="background: #b8b8b8"></span>
-                                  <span class="LegendTitle">Committed</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">Committed</span>
                                 </li>
                               </div>
                               <div class="col-xs-4">
                                 <li>
                                   <span style="background: #bd761a"></span>
-                                  <span class="LegendTitle">Proposed</span>
+                                  <span class="LegendTitle" style="width: 62px !important;">Proposed</span>
                                 </li>
                               </div>
                             </div>
@@ -885,15 +885,15 @@
                                   <ul class="legend-labels">
                                     <li>
                                       <span style="background: #da8177"></span>
-                                      <span class="LegendTitle">Low (0 - 60%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Low (0 - 60%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #f8c143"></span>
-                                      <span class="LegendTitle">Mid (60-80%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Mid (60-80%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #9fcd63"></span>
-                                      <span class="LegendTitle">High (&gt;80%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">High (&gt;80%)</span>
                                     </li>
                                   </ul>
                                 </div>
@@ -914,15 +914,15 @@
                                   <ul class="legend-labels">
                                     <li>
                                       <span style="background: #da8177"></span>
-                                      <span class="LegendTitle">Low (&gt;-2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Low (&lt;-2%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #f8c143"></span>
-                                      <span class="LegendTitle">Mid (-2-2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Mid (-2-2%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #9fcd63"></span>
-                                      <span class="LegendTitle">High (&gt;2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">High (&gt;2%)</span>
                                     </li>
                                   </ul>
                                 </div>
@@ -989,7 +989,7 @@
                           Moments of Delight
                         </div>
                         <div class="col-xs-12 item" style="padding: 12px">
-                          <div class="qvobject" id="QV-45" style="height: 160px"></div>
+                          <div class="qvplaceholder" id="QV-45" style="height: 160px"></div>
                         </div>
                       </div>
                     </div>
@@ -1068,12 +1068,12 @@
               <div class="row" style="padding: 0px 16px">
                 <div class="col-xs-12" style="padding: 0px">
                   <div class="item bg-dark" style="height: 520px">
-                    <div class="row" style="height: 40px; padding: 0px 16px">
-                      <div class="col-xs-12 title">
-                        Understanding Customer Satisfaction
-                      </div>
-                    </div>
                     <div class="col-xs-12 col-sm-8">
+                      <div class="row" style="height: 40px; padding: 0px 16px">
+                        <div class="col-xs-12 title">
+                          Understanding Customer Satisfaction
+                        </div>
+                      </div>
                       <div class="row" style="height: 430px">
                         <div class="col-xs-12" style="height: 100%; padding: 0px">
                           <div class="d-flex justify-content-end" style="
@@ -1084,15 +1084,15 @@
                               justify-content: flex-end;
                             ">
                             <div class="btn-group toggle" role="group" aria-label="Basic example">
-                              <button type="button" id="selectAbsolute" class="btn btn-secondary btn-round">
-                                Absolute
+                              <button type="button" id="selectOverall" class="btn btn-secondary btn-round">
+                                Overall
                               </button>
-                              <button type="button" id="selectRelative" class="btn btn-secondary btn-round">
-                                Relative
+                              <button type="button" id="selectSegment" class="btn btn-secondary btn-round">
+                                Segment
                               </button>
                             </div>
                           </div>
-                          <div id="absolute" style="
+                          <div id="overall" style="
                               height: 445px;
                               position: relative;
                               bottom: 36px !important;
@@ -1106,22 +1106,22 @@
                                   <ul class="legend-labels">
                                     <li>
                                       <span style="background: #da8177"></span>
-                                      <span class="LegendTitle">Low (0 - 60%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Low (0 - 60%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #f8c143"></span>
-                                      <span class="LegendTitle">Mid (60-80%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Mid (60-80%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #9fcd63"></span>
-                                      <span class="LegendTitle">High (&gt;80%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">High (&gt;80%)</span>
                                     </li>
                                   </ul>
                                 </div>
                               </div>
                             </div>
                           </div>
-                          <div id="relative" style="
+                          <div id="segment" style="
                               height: 445px;
                               position: relative;
                               bottom: 36px !important;
@@ -1135,15 +1135,15 @@
                                   <ul class="legend-labels">
                                     <li>
                                       <span style="background: #da8177"></span>
-                                      <span class="LegendTitle">Low (&gt;-2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Low (&lt;2%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #f8c143"></span>
-                                      <span class="LegendTitle">Mid (-2-2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Mid (-2-2%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #9fcd63"></span>
-                                      <span class="LegendTitle">High (&gt;2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">High (&gt;2%)</span>
                                     </li>
                                   </ul>
                                 </div>
@@ -1173,7 +1173,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvobject" id="QV-45" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-45" style="height: 35px"></div>
                           </div>
                           <div class="row" style="height: 20px">
                             sub-title
@@ -1181,7 +1181,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvobject" id="QV-45" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-45" style="height: 35px"></div>
 
                           </div>
                           <div class="row" style="height: 20px">
@@ -1190,9 +1190,9 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvobject" id="QV-45" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-45" style="height: 35px"></div>
                           </div>
-                          <div class="row" style="height: 35px">
+                          <div class="row" style="height: 20px">
                             sub-title
                           </div>
                         </div>
@@ -1203,7 +1203,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvobject" id="QV-45" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-45" style="height: 35px"></div>
                           </div>
                           <div class="row" style="height: 20px">
                             sub-title
@@ -1211,7 +1211,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvobject" id="QV-45" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-45" style="height: 35px"></div>
 
                           </div>
                           <div class="row" style="height: 20px">
@@ -1220,9 +1220,9 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvobject" id="QV-45" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-45" style="height: 35px"></div>
                           </div>
-                          <div class="row" style="height: 35px">
+                          <div class="row" style="height: 20px">
                             sub-title
                           </div>
                         </div>
